# password_app

./: .gitignore  README.md  pyproject.toml  run.py
backend/: __init__.py  pyproject.toml  run.py
backend/api/v1/: deps.py
backend/api/v1/routers/: __init__.py  auth.py  passwords.py
backend/core/: __init__.py  config.py  security.py
backend/core/routers/: auth.py  models.py  passwords.py
backend/crud/: __init__.py  password.py  user.py
backend/models/: __init__.py  password.py  user.py
backend/schemas/: password.py  user.py
core/: __init__.py  config.py
core/routers/: auth.py  models.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: home-page.tsx  index.css  login-page.tsx  main.tsx  page.tsx  signup.tsx
frontend/src/components/: add-password-dialog.tsx  edit-password-dialog.tsx  items-data-table.tsx  login-form.tsx  mode-toggle.tsx  signup-form.tsx  site-header.tsx
frontend/src/components/ui/: dropdown-menu.tsx  select.tsx
frontend/src/utils/: items-schema.tsx
