[project]
name = "password-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "fastapi>=0.124.2",
    "greenlet>=3.3.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.9",
    "segno>=1.6.6",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
